src/objects/Capo__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sera</fullName>
                </value>
                <value>
                    <fullName>Ready-to-wear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Abito__c</fullName>
        <label>Codice Abito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Capo__c</fullName>
        <formula>CASE (RecordType.DeveloperName,
&quot;Abito&quot;,  Codice_Abito__c,
&quot;Giacca&quot;,  Codice_Giacca__c,
&quot;Pantalone&quot;,  Codice_Pantalone__c,
&quot;Panciotto&quot;, Codice_Panciotto__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Capo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Giacca__c</fullName>
        <label>Codice Giacca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Panciotto__c</fullName>
        <label>Codice Panciotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Pantalone__c</fullName>
        <label>Codice Pantalone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Stagionale_Abito__c</fullName>
        <formula>Stagione__r.Codice_Stagione__c   &amp; Codice_Abito__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Stagionale Abito</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Stagionale_Giacca__c</fullName>
        <formula>Stagione__r.Codice_Stagione__c &amp; Codice_Giacca__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Stagionale Giacca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Stagionale_Pantalone__c</fullName>
        <formula>Stagione__r.Codice_Stagione__c &amp; Codice_Pantalone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Stagionale Pantalone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Giacca__c</fullName>
        <label>Descrizione Modello Giacca</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAVALLO REVER GRANDE</fullName>
                </value>
                <value>
                    <fullName>REVER A LANCIA</fullName>
                </value>
                <value>
                    <fullName>REVER A LANCIA GRANDE</fullName>
                </value>
                <value>
                    <fullName>REVER A SPECCHIO 3 TASCHE A TOPPA</fullName>
                </value>
                <value>
                    <fullName>TRADIZIONALE</fullName>
                </value>
                <value>
                    <fullName>UN PETTO E MEZZO</fullName>
                </value>
                <value>
                    <fullName>UN PETTO E MEZZO TASCHE A TOPPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Panciotto__c</fullName>
        <label>Descrizione Modello Panciotto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Waistcoat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Pantalone__c</fullName>
        <label>Descrizione Modello Pantalone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fondo 19,5</fullName>
                </value>
                <value>
                    <fullName>Pince Fondo 19,5</fullName>
                </value>
                <value>
                    <fullName>Flat with 19,5 cm bottom</fullName>
                </value>
                <value>
                    <fullName>Pleated with 19,5 cm bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modello_Giacca__c</fullName>
        <label>Modello Giacca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modello_Panciotto__c</fullName>
        <label>Modello Panciotto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posizione__c</fullName>
        <label>Posizione</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Label__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stagione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stagione</label>
        <referenceTo>Stagione__c</referenceTo>
        <relationshipLabel>Capi</relationshipLabel>
        <relationshipName>Capi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Filato__c</fullName>
        <label>Tipo Filato</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Giacca__c</fullName>
        <label>Tipo Giacca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Giacca_un_petto</fullName>
                </value>
                <value>
                    <fullName>Giacca_un_petto_e_mezzo</fullName>
                    <label>Giacca un petto e mezzo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia_MTM__c</fullName>
        <label>Tipologia MTM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_Pantalone__c</fullName>
        <label>Tipologia Pantalone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_costruzione_MTM__c</fullName>
        <label>Tipologia costruzione MTM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Capo</label>
    <nameField>
        <label>Capo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capi</pluralLabel>
    <recordTypes>
        <fullName>Abito</fullName>
        <active>true</active>
        <label>Abito</label>
    </recordTypes>
    <recordTypes>
        <fullName>Giacca</fullName>
        <active>true</active>
        <label>Giacca</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panciotto</fullName>
        <active>true</active>
        <label>Panciotto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pantalone</fullName>
        <active>true</active>
        <label>Pantalone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>